--- a/index.html
+++ b/index.html
@@ -160,18 +160,20 @@
       <h3 class="display-4 font-weight-bold">CONTACT ME</h3>
       <hr class=" w-50 mx-auto ">
   </div>
-  <form  onsubmit="return false" >
+  <form  action="https://formsubmit.co/harshittheone008@gmail.com"   method="POST" >
+    <input type="hidden" name="_captcha" value="false">
+    <input type="hidden" name="_next" value="https://harshittheone007.github.io/thankyou.github.io/">
     <div class="form-group">
       <label for="email">EMAIL ADDRESS:</label>
-      <input type="email" class="form-control" id="email">
+      <input type="email" class="form-control" id="email" name="email">
     </div>
     <div class="form-group">
       <label for="fullname">FULL NAME:</label>
-      <input type="text" class="form-control" id="fullname">
+      <input type="text" class="form-control" id="fullname" name="fullname">
     </div>
     <div class="form-group">
       <label for="message">YOUR MESSAGE:</label>
-      <textarea class="form-control" id="message"></textarea>
+      <textarea class="form-control" id="message" name="message"></textarea>
       </div>
     <button  id ="submit1" type="submit" class="btn btn-dark btn-change">Submit</button>
   </form>
