--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
   </div>
   <form  action="https://formsubmit.co/harshittheone008@gmail.com"   method="POST" >
     <input type="hidden" name="_captcha" value="false">
-    <input type="hidden" name="_next" value="https://harshittheone007.github.io/thankyou.github.io/">
+    <input type="hidden" name="_next" value="https://HarshitSharma007.github.io/thankyou.github.io/">
     <div class="form-group">
       <label for="email">EMAIL ADDRESS:</label>
       <input type="email" class="form-control" id="email" name="email">
