--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="card-body">
               <h4 class="card-title">Rock paper Scissor Game </h4>
               <p class="card-text">play against computer in your free time purely html ,css and js project .</p>
-              <a href="https://harshittheone007.github.io/rockpaperscissor.github.io" class="btn btn-dark ppo">Live Preview</a>
+              <a href="https://harshitsharma007.github.io/rockpaperscissor.github.io/" class="btn btn-dark ppo">Live Preview</a>
             </div>
           </div>
         </div> 
@@ -101,9 +101,9 @@
           <div class="card m-3" >
             <img class="card-img-top" src="rdZxXJ.default.webp" alt="Card image">
             <div class="card-body">
-              <h4 class="card-title">cat grenerator </h4>
+              <h4 class="card-title">Random Image grenerator </h4>
               <p class="card-text">play against computer in your free time purely html ,css and js project ,takes help of an api to get images.</p>
-              <a href="#" class="btn btn-dark ppo">Live Preview</a>
+              <a href="https://harshitsharma007.github.io/randomimages/" class="btn btn-dark ppo">Live Preview</a>
             </div>
           </div>
         </div>
@@ -113,7 +113,7 @@
             <div class="card-body">
               <h4 class="card-title">TODO list  </h4>
               <p class="card-text">play against computer in your free time purely html ,css and js project will hepl you to keep your taks ready .</p>
-              <a href="#" class="btn btn-dark ppo">Live Preview</a>
+              <a href="https://harshitsharma007.github.io/todolist/" class="btn btn-dark ppo">Live Preview</a>
             </div>
           </div>
         </div>
@@ -121,9 +121,9 @@
           <div class="card m-3" >
             <img class="card-img-top" src="the-best-app-to-watch-free-movies-and-tv-shows-for-windows-8-10.jpg" alt="Card image">
             <div class="card-body">
-              <h4 class="card-title">Movies  app</h4>
+              <h4 class="card-title">Covid Tracker</h4>
               <p class="card-text">play against computer in your free time purely html ,css and js project .</p>
-              <a href="#" class="btn btn-dark ppo">Live Preview</a>
+              <a href="https://harshit-covidtracker.netlify.app/" class="btn btn-dark ppo">Live Preview</a>
             </div>
           </div>
         </div>
@@ -131,9 +131,9 @@
           <div class="card m-3" >
             <img class="card-img-top" src="fb-stopwatch2.png" alt="Card image">
             <div class="card-body">
-              <h4 class="card-title">stop watch</h4>
+              <h4 class="card-title">Typing Master</h4>
               <p class="card-text">play against computer in your free time purely html ,css and js project .</p>
-              <a href="#" class="btn btn-dark ppo">Live Preview</a>
+              <a href="https://harshitsharma007.github.io/web-dev--projects/2-typing%20test/index.html" class="btn btn-dark ppo">Live Preview</a>
             </div>
           </div>
         </div>
