--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             Hiiii,I am a web developer and i am currently pursuing my btech from National Institute of technology,Jalandhar .I love javascript and also an expert in C++ .I have good grasp over data structures and algorithms .I have made  a lot of games and projects on javascript and have also mastered advanced javascript .i can work on frontend projects .<div class=""></div>
           </p>
           <div class="dr text-center">  <button class="btn w-50 ">
-            <a href="https://github.com/HarshitSharma007/resume/blob/main/Harshit's%20Resume%20final%202.pdf" download ="Harshit's Resume final 2.pdf">Download Resume</a>
+            <a href="https://github.com/HarshitSharma007/Harshit-Sharma.github.io/blob/main/Harshit's%20Resume%20final%202.pdf" download ="Harshit's Resume final 2.pdf">Download Resume</a>
         </button></div>
         
         </div>
