--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div> 
         <div class="col-lg-4 col-md-6 col-12 ">
           <div class="card m-3" >
-            <img class="card-img-top" src="rdZxXJ.default.webp" alt="Card image">
+            <img class="card-img-top" src="random.png" alt="Card image">
             <div class="card-body">
               <h4 class="card-title">Random Image grenerator </h4>
               <p class="card-text">play against computer in your free time purely html ,css and js project ,takes help of an api to get images.</p>
@@ -119,7 +119,7 @@
         </div>
           <div class="col-lg-4 col-md-6 col-12">
           <div class="card m-3" >
-            <img class="card-img-top" src="the-best-app-to-watch-free-movies-and-tv-shows-for-windows-8-10.jpg" alt="Card image">
+            <img class="card-img-top" src="covid.jpg" alt="Card image">
             <div class="card-body">
               <h4 class="card-title">Covid Tracker</h4>
               <p class="card-text">play against computer in your free time purely html ,css and js project .</p>
@@ -129,7 +129,7 @@
         </div>
           <div class="col-lg-4 col-md-6 col-12">
           <div class="card m-3" >
-            <img class="card-img-top" src="fb-stopwatch2.png" alt="Card image">
+            <img class="card-img-top" src="typing.png" alt="Card image">
             <div class="card-body">
               <h4 class="card-title">Typing Master</h4>
               <p class="card-text">play against computer in your free time purely html ,css and js project .</p>
