--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div class="card-body">
               <h4 class="card-title">Weather App</h4>
               <p class="card-text">play against computer in your free time purely html ,css and js project .</p>
-              <a href="#" class="btn btn-dark ppo">Live Preview</a>
+              <a href="https://harshitsharma007.github.io/weather/" class="btn btn-dark ppo">Live Preview</a>
             </div>
           </div>
      </div>
