--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
         </div>
           <div class="col-lg-4 col-md-6 col-12">
           <div class="card m-3" >
-            <img class="card-img-top" src="covid.jpg" alt="Card image">
+            <img class="card-img-top" src="post.jpg" alt="Card image">
             <div class="card-body">
-              <h4 class="card-title">Covid Tracker</h4>
-              <p class="card-text">play against computer in your free time purely html ,css and js project .</p>
-              <a href="https://harshit-covidtracker.netlify.app/" class="btn btn-dark ppo">Live Preview</a>
+              <h4 class="card-title">Post-man Clone </h4>
+              <p class="card-text"> Test your API using my postman clone .I made it using  vanilla javascript </p>
+              <a href="https://harshitsharma007.github.io/postman-clone/" class="btn btn-dark ppo">Live Preview</a>
             </div>
           </div>
         </div>
