--- a/index.html
+++ b/index.html
@@ -89,34 +89,35 @@
      <div class="col-lg-4 col-md-6 col-12">
       
         <div class="card m-3" >
-            <img class="card-img-top" src="maxresdefault.jpg" alt="Card image">
+            <img class="card-img-top" src="99.jpg" alt="Card image">
             <div class="card-body">
-              <h4 class="card-title">Rock paper Scissor Game </h4>
-              <p class="card-text">play against computer in your free time purely html ,css and js project .</p>
-              <a href="https://harshitsharma007.github.io/rockpaperscissor.github.io/" class="btn btn-dark ppo">Live Preview</a>
+              <h4 class="card-title">Crowdfunding Dapp</h4>
+              <p class="card-text"> A Decentralised Crowdfunding Platform to help build creative projects to life.</p>
+              <a href="https://kaleidoscopic-melba-3c95c0.netlify.app/" class="btn btn-dark ppo">Live Preview</a>
             </div>
           </div>
         </div> 
+        <div class="col-lg-4 col-md-6 col-12">
+          <div class="card  m-3" >
+            <img class="card-img-top" src="102.png" alt="Card image">
+            <div class="card-body">
+              <h4 class="card-title">Happy DAO</h4>
+              <p class="card-text">A Dao made using ERC-20, ERC-1155 tokens with voting rights for members</p>
+              <a href="https://happy-dao.netlify.app/" class="btn btn-dark ppo">Live Preview</a>
+            </div>
+          </div>
+        </div>
         <div class="col-lg-4 col-md-6 col-12 ">
           <div class="card m-3" >
-            <img class="card-img-top" src="random.png" alt="Card image">
+            <img class="card-img-top" src="100.jpg" alt="Card image">
             <div class="card-body">
-              <h4 class="card-title">Random Image grenerator </h4>
-              <p class="card-text">play against computer in your free time purely html ,css and js project ,takes help of an api to get images.</p>
-              <a href="https://harshitsharma007.github.io/randomimages/" class="btn btn-dark ppo">Live Preview</a>
+              <h4 class="card-title">DECENTRALIZED GOOGLE DRIVE </h4>
+              <p class="card-text"> Decentralized file sytem built on ethereum blockchain</p>
+              <a href="https://github.com/HarshitSharma007/gdrive3.0" class="btn btn-dark ppo">Live Preview</a>
             </div>
           </div>
         </div>
-          <div class="col-lg-4 col-md-6 col-12">
-          <div class="card  m-3" >
-            <img class="card-img-top" src="1_VTKsiByHMcWDIxpFawp4fg.png" alt="Card image">
-            <div class="card-body">
-              <h4 class="card-title">TODO list  </h4>
-              <p class="card-text">play against computer in your free time purely html ,css and js project will hepl you to keep your taks ready .</p>
-              <a href="https://harshitsharma007.github.io/todolist/" class="btn btn-dark ppo">Live Preview</a>
-            </div>
-          </div>
-        </div>
+          
           <div class="col-lg-4 col-md-6 col-12">
           <div class="card m-3" >
             <img class="card-img-top" src="post.jpg" alt="Card image">
